# Coursework

./: .Flake8  .gitignore  README.md  pyproject.toml
src/: main.py  reports.py  services.py  views.py
src/logger/: config.py
tests/: conftest.py  test_main.py  test_reports.py  test_services.py  test_views.py
