[tool.poetry]
name = "coursework"
version = "0.1.0"
description = ""
authors = ["Mikhail Byrdukovsky <burmspb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
pandas = "^3.0.1"
path = "^17.1.1"
openpyxl = "^3.1.5"
requests = "^2.32.5"
yfinance = "^1.2.0"
python-dotenv = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pandas-stubs (>=3.0.0.260204,<4.0.0.0)",
    "types-requests (>=2.32.4.20260107,<3.0.0.0)",
    "types-python-dateutil (>=2.9.0.20260305,<3.0.0.0)"
]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.run
)/
'''

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.run
)/
'''

[tool.isort]
line_length = 119

# Игнор анотаций в папке с тестами
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Игнор yfinance
[[tool.mypy.overrides]]
module = "yfinance.*"
ignore_missing_imports = true
